<resources>
    <string name="app_name">Tutorial08</string>
    <string name="Registration">Registration Form</string>
    <string name="user_name">UserName :</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="password">Password :</string>
    <string name="City">City :</string>
    <string name="Gender">Gender :</string>
    <string name="Status">Status :</string>
    <string name="Branch">Branch :</string>
    <string name="BranchCEIT">Branch CE/IT</string>
    <string name="btnLogin">Login</string>
    <string name="enter_username">Enter email as Username</string>
    <string name="enter_FirstName">Enter First name</string>
    <string name="enter_LastName">Enter Last name</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome">Welcome</string>
    <string name="Login">Log in</string>
    <string name="Logout">Logout</string>
    <string name="newRegister">Not a member yet? Get Register here</string>
    <string name="user_detail">User Detail</string>
</resources>