<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:shadowColor="#050505"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:text="@string/Login"
                android:textColor="@color/colorPink"
                android:textSize="36sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    card_view:cardCornerRadius="50dp"
                    card_view:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="503dp"
                        android:background="@drawable/background_of_login_layout"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="154dp"
                            android:layout_height="144dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:fontFamily="@font/font"
                                android:gravity="center_horizontal"
                                android:text="@string/user_name"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/edtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorBGtint"
                                android:ems="10"
                                android:fontFamily="@font/font"
                                android:hint="@string/enter_username"
                                android:importantForAutofill="no"
                                android:inputType="textEmailAddress"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:fontFamily="@font/font"
                                android:gravity="center_horizontal"
                                android:text="@string/password"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/edtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorBGtint"
                                android:ems="10"
                                android:fontFamily="@font/font"
                                android:hint="@string/enter_password"
                                android:importantForAutofill="no"
                                android:inputType="textPassword" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnLogin"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:background="@color/colorPink"
                                android:fontFamily="@font/font"
                                android:scrollbarStyle="outsideOverlay"
                                android:shadowColor="#3C1E85"
                                android:text="@string/btnLogin"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="80dp"
                            android:gravity="center"
                            android:onClick="new_register"
                            android:text="@string/newRegister" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
